# nut

./: .gitignore  .rustc_info.json  Cargo.toml  README.md  bochsrc.bxrc  bochsrs.cfg  build.rs
.cargo/: config.toml
bootloader/bios/: Cargo.toml
bootloader/bios/src/: disk_access.rs  fail.rs  framebuffer.rs  lib.rs  logger.rs  print.rs
bootloader/bios/stage0/: Cargo.toml  README.md  boot-sector-link.ld  boot-stage0-link.ld
bootloader/bios/stage0/src/: boot.s  main.rs  mbr.rs
bootloader/bios/stage1/: Cargo.toml  boot-stage1-link.ld  build.rs
bootloader/bios/stage1/src/: fat.rs  load_file.rs  main.rs  memory_map.rs  partition.rs  print.rs  protected_mode.rs  vesa.rs
bootloader/bios/stage2/: Cargo.toml  build.rs
bootloader/bios/stage2/src/: gdt.rs  main.rs  paging.rs  screen.rs
bootloader/bios/stage3/: Cargo.toml  boot-stage-3-link.ld  build.rs
bootloader/bios/stage3/src/: main.rs
kernel/: Cargo.toml
kernel/src/: main.rs
src/: boot.s  disk.rs  fat.rs  main.rs
x86_64/: Cargo.toml
x86_64/src/: address.rs  gdt.rs  lib.rs  privilege_level.rs
x86_64/src/instructions/: tables.rs
x86_64/src/registers/: segmentation.rs
