[package]
name = "nut"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
    "bootloader/bios/stage0",
    "bootloader/bios/stage1"
]

[profile.dev]
panic = "abort"
lto = false

[profile.release]
panic = "abort"
lto = false

[profile.stage0]
inherits = "release"
opt-level = "s"
codegen-units = 1
debug = false
lto = true
overflow-checks = true

[profile.stage1]
inherits = "release"
opt-level = "s"
codegen-units = 1
debug = false
overflow-checks = true

[build-dependencies]
async-process = "1.6.0"
futures = "0.3.25"
futures-concurrency = "7.0.0"
mbrman = "0.5.2"
