[package]
name = "nut"
version = "0.1.0"
edition = "2021"

[dependencies]
mbrman = "0.5.2"
tempfile = "3.3.0"
fatfs = { version = "0.3.4", default-features = false, features = [
    "std",
    "alloc",
] }

[workspace]
members = [
    "x86_64",
    "bootloader/bios",
    "bootloader/bios/stage0",
    "bootloader/bios/stage1",
    "bootloader/bios/stage2"
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
x86_64 = {version = "0.1.0", path = "x86_64" }
bootloader-x86_64-bios = {version = "0.1.0", path = "bootloader/bios"}


[profile.dev]
panic = "abort"
lto = false

[profile.release]
panic = "abort"
lto = false

[profile.stage0]
inherits = "release"
opt-level = "s"
codegen-units = 1
debug = false
lto = true
overflow-checks = true

[profile.stage1]
inherits = "release"
opt-level = "s"
codegen-units = 1
debug = false
overflow-checks = false

[profile.stage2]
inherits = "release"
debug = true
overflow-checks = true

[build-dependencies]
async-process = "1.6.0"
futures = "0.3.25"
futures-concurrency = "7.0.0"

[build]
target = "x86_64-pc-windows-msvc"
