[package]
name = "nut"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["kernel", "x86_64"]

[workspace.package]
version = "0.1.0"

[build-dependencies]
bootloader = "0.11.4"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
x86_64 = {version = "0.1.0", path = "x86_64" }

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"
