[package]
name = "bootloader-x86_64-bios-stage1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build]
target = "i386-code16-stage0.json"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"