[package]
name = "bootloader-x86_64-bios-stage2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = { workspace = true }
bootloader-x86_64-bios = { workspace = true }

[build]
target = "i386-unknown-none.json"
