[package]
name = "bootloader-x86_64-bios-stage3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = { workspace = true }
bootloader-x86_64-bios = { workspace = true }
log = "0.4.14"

[build]
target = "x86_64-unknown-nut.json"
